added Furqan Software

--- a/README.adoc
+++ b/README.adoc
@@ -207,6 +207,11 @@ https://github.com/ChumbokIT[Github]
 |C, C++, MFC, Open CV, Open GL
 |http://www.frontiersemi.com/center/home.php[Website]
 
+|Furqan Software
+|House 29 (Flat 4B), Road, 20 Rd 22, Block#K, Dhaka 1213
+|
+|https://furqansoftware.com/[Website]
+
 |===
 
 
