A WordPress Company (WPCommerz) Added

--- a/README.adoc
+++ b/README.adoc
@@ -768,6 +768,11 @@ https://www.facebook.com/iPayBangladesh/[Facebook]
 |JavaScript, HTML, CSS, React, Node, AWS
 |https://www.wundermanthompson.com/[Website]
 
+|WPCommerz
+|Mirpur 12, Dhaka
+|PHP, Laravel, WordPress, JavaScript, Vue.js, ReactJS
+|https://wpcommerz.com/[Website]
+
 
 
 |===
