--- a/README.adoc
+++ b/README.adoc
@@ -217,7 +217,7 @@ https://github.com/ChumbokIT[Github]
 |http://www.frontiersemi.com/center/home.php[Website]
 
 |Furqan Software
-|House 29 (Flat 4B), Road, 20 Rd 22, Block#K, Dhaka 1213
+|House 29 (Flat 4B), Road, 20 Rd 22, Block#K,Banani Dhaka-1213
 |
 |https://furqansoftware.com/[Website]
 
