--- a/README.adoc
+++ b/README.adoc
@@ -50,8 +50,13 @@ List of tech companies to help developers to find jobs.
 
 |Binate Solutions
 |House-1148 (1st, 3rd, & 4th floor), Road 9A(Old-48), Mirpur DOHS, Dhaka-1216, Bangladesh
-|Java, Python, Ruby, Wordpress, Magento etc.
+|Java, Python, Ruby, Wordpress, Magento.
 |https://www.binate-solutions.com/[Website]
+
+|Bit Mascot (Pvt.) Ltd.
+|Flat 12/E, House 11/8/E, Free School Street, Panthapath, Dhaka 1205
+|Java, Spring, .NET, JavaScript, jQuery, Python, TensorFlow, WordPress
+|https://www.bitmascot.com/[Website]
 
 |Brac IT Services (biTS)
 |Homaira Bhaban, House 115, Road 5, Block B, Niketan, Gulshan 1, Dhaka 1212, Bangladesh
@@ -137,7 +142,7 @@ https://github.com/ChumbokIT[Github]
 
 |Commlink Info Tech Limited
 |House No: 3 Road No: 23/A  Gulshan-1, Dhaka-1212 BANGLADESH.
-|Java, Spring etc.
+|Java, Spring
 |https://www.commlinkinfotech.com/[Website]
 
 |===
@@ -160,6 +165,11 @@ https://github.com/ChumbokIT[Github]
 |Mirpur DOHS Avenue #3. Road #12, House #860-861, Dhaka 1216
 |.NET, PHP, Android, iOS
 |http://www.databizsoftware.com/[Website]
+
+|Divine IT Limited
+|House 29, Road 12, Sector 10, Uttara, Dhaka-1230
+|Python, Django, Flask, SQLAlchemy, Django ORM, React, Node, Vue, Angular
+|https://www.divineit.net/[Website]
 
 |Dingi Technologies
 |Floor 4, Wakil Tower, Ta 131, Gulshan Badda Link Road, Dhaka 1212, Bangladesh
@@ -198,12 +208,12 @@ https://github.com/ChumbokIT[Github]
 
 |Evaly Limited
 |House #8, Road # 14, Dhanmondi, Dhaka-1209
-|NodeJS, ExpressJS, Python, Django, GoLang, REST, Microservices, SQL, NoSQL, SQS, SNS MQTT, etc.
+|NodeJS, ExpressJS, Python, Django, GoLang, REST, Microservices, SQL, NoSQL, SQS, SNS, MQTT
 |https://evaly.com.bd/career/[Website]
 
 |Exabyting Technologies
 |Remote
-|JAVA, Spring, PHP, Laravel, JavaScript, NodeJS, ExpressJS, Python, Django, REST, Microservices, SQL, NoSQL, SQS, SNS, etc.
+|JAVA, Spring, PHP, Laravel, JavaScript, NodeJS, ExpressJS, Python, Django, REST, Microservices, SQL, NoSQL, SQS, SNS
 |http://exabyting.com/[Website]
 
 |Fieldbuzz (Germany)
@@ -213,7 +223,7 @@ https://github.com/ChumbokIT[Github]
 
 |Fiftytwo
 |House # 04, Road # 9/B, Nikunja - 1, Dhaka - 1229
-|C, C++, Angular, SQL etc.
+|C, C++, Angular, SQL
 |https://www.fiftytwo.com[Website]
 
 |Flyte Solutions 
@@ -287,7 +297,7 @@ https://github.com/ChumbokIT[Github]
 
 |Inflack Limited
 |H-36, B-A, R-1, Bashundhara Residential Area, Dhaka
-|PHP, Laravel, JAVA, Spring, JavaScript, Python, Django, REST, Microservices, SQL, NoSQL, SQS, SNS, etc.
+|PHP, Laravel, JAVA, Spring, JavaScript, Python, Django, REST, Microservices, SQL, NoSQL, SQS, SNS
 |http://inflack.com/[Website]
 
 |Infocrat Solutions Ltd.
@@ -302,7 +312,7 @@ https://github.com/ChumbokIT[Github]
 
 |Integrated Software and Technologies Ltd.
 |Avenue # 9, Road #9, House #1043 (2nd Floor) DOHS Mirpur, Dhaka, Bangladesh
-|C, Java, jQuery etc.
+|C, Java, jQuery
 |https://www.istlbd.com/[Website]
 
 |Intellier Limited
@@ -447,7 +457,7 @@ https://www.linkedin.com/company/magnito-digital/[LinkedIn]
 
 |NetCoden Inc
 |Suite: B-7 (7th Floor), 2/2, Pallabi (Main Road), Mirpur 11.5, Dhaka-1216 , Bangladesh
-|Node.js, Vue.js, React, C++, Android, Php, Laravel, SQL etc.
+|Node.js, Vue.js, React, C++, Android, Php, Laravel, SQL
 |https://netcoden.com/[Website]
 
 |Nybbles System Limited
@@ -457,7 +467,7 @@ https://www.linkedin.com/company/magnito-digital/[LinkedIn]
 
 |Orbund LLC
 |Bosila, Mohammadpur, Dhaka, Bangladesh
-|Java, Android, iOS etc.
+|Java, Android, iOS
 |https://www.orbund.com/[Website]
 
 |Otto International Ltd.
@@ -547,7 +557,7 @@ https://www.linkedin.com/company/magnito-digital/[LinkedIn]
 
 |ServicEngine Ltd.
 |House# 8, Abbas Garden, DOHS Mohakhali, Dhaka - 1206
-|Groovy, Java, SQL, Spring etc.
+|Groovy, Java, SQL, Spring
 |https://sebpo.com/[Website]
 
 |Sheba Technologies Limited
@@ -598,7 +608,7 @@ https://www.linkedin.com/company/southtechgroup/[LinkedIn]
 
 |Square Health Ltd.
 |House 18, Road 13, Uttara (Sector 7) Dhaka 1230, Bangladesh
-|Java, Angular, React, Android etc.
+|Java, Angular, React, Android
 |https://squarehealth.com.bd[Website]
 
 |Systems Solutions & Development Technologies Ltd. (SSD-TECH)
@@ -662,6 +672,11 @@ https://www.linkedin.com/company/southtechgroup/[LinkedIn]
 |6th Floor, Dynasty Tower, Begum Rokeya Avenue, Mirpur 11, Dhaka, Bangladesh
 |Java, PHP, AngularJS
 |https://www.vantage.com/[Website],  https://www.facebook.com/VantageLabsDhaka/[Facebook]
+
+|Vivasoft
+|Floor #16, Ahmed Tower, 28, 30, Kemal Ataturk Ave, Banani, Dhaka 1213
+|Java, C#, React.js, GoLang, Python
+|https://www.vivasoftltd.com/[Website],  https://www.facebook.com/VivasoftLtd[Facebook]
 
 |Walton Hi-Tech Industries Ltd.
 |Chandra, Kaliakoir, Gazipur
