--- a/README.adoc
+++ b/README.adoc
@@ -70,7 +70,7 @@ List of tech companies to help developers to find jobs.
 |https://www.braincraftapps.com[Website]
 
 |Brain Station 23
-|8th floor, Plot#2, Amtoli, Bir Uttam AK Khandakar Rd Mohakhali Commercial Area, Dhaka-1212
+|8th floor, Plot 2, Amtoli, Bir Uttam AK Khandakar Rd Mohakhali Commercial Area, Dhaka-1212
 |Android, IOS, React, React-Native, Odoo, Xamarin, .Net, PHP, Python, Java, AEM, Sitecore
 |http://www.brainstation-23.com/[Website]
 
@@ -100,7 +100,7 @@ List of tech companies to help developers to find jobs.
 |https://www.circlefintech.com/[Website]
 
 |Craftsmen (EU)
-|House # 272 (1st Floor), Lane # 3 (Eastern Road), DOHS Baridhara, Dhaka 1206, Bangladesh.
+|House 272 (1st Floor), Lane 3 (Eastern Road), DOHS Baridhara, Dhaka 1206, Bangladesh.
 |JavaScript/TypeScript, Node.js, Python, React/Vue.js, Redux, React Native, AWS, Serverless Framework, AI/Machine Learning, GCP, Azure, IBM Watson
 |https://www.craftsmenltd.com/[Website] +
 https://www.linkedin.com/organization-guest/company/craftsmenltd[LinkedIn] +
@@ -141,7 +141,7 @@ https://github.com/ChumbokIT[Github]
 |http://www.codinism.com[Website]
 
 |Commlink Info Tech Limited
-|House No: 3 Road No: 23/A  Gulshan-1, Dhaka-1212 BANGLADESH.
+|House 3 Road 23/A, Gulshan-1, Dhaka-1212 Bangladesh.
 |Java, Spring
 |https://www.commlinkinfotech.com/[Website]
 
@@ -157,12 +157,12 @@ https://github.com/ChumbokIT[Github]
 |http://datasoft-bd.com/[Website]
 
 |Daffodil Software Limited (DSL)
-|DF Tower (Level: 11-A), House # 11, Road # 14, Dhanmondi, Dhaka-1209
+|DF Tower (Level: 11-A), House 11, Road 14, Dhanmondi, Dhaka-1209
 |Java, .NET, PHP, Android, iOS
 |http://daffodilsoft.com/[Website]
 
 |Databiz Software Limited
-|Mirpur DOHS Avenue #3. Road #12, House #860-861, Dhaka 1216
+|Mirpur DOHS Avenue 3. Road 12, House 860-861, Dhaka 1216
 |.NET, PHP, Android, iOS
 |http://www.databizsoftware.com/[Website]
 
@@ -207,7 +207,7 @@ https://github.com/ChumbokIT[Github]
 |http://www.escenic.com/[Website]
 
 |Evaly Limited
-|House #8, Road # 14, Dhanmondi, Dhaka-1209
+|House 8, Road 14, Dhanmondi, Dhaka-1209
 |NodeJS, ExpressJS, Python, Django, GoLang, REST, Microservices, SQL, NoSQL, SQS, SNS, MQTT
 |https://evaly.com.bd/career/[Website]
 
@@ -222,7 +222,7 @@ https://github.com/ChumbokIT[Github]
 |https://www.field.buzz[Website]
 
 |Fiftytwo
-|House # 04, Road # 9/B, Nikunja - 1, Dhaka - 1229
+|House 04, Road 9/B, Nikunja - 1, Dhaka-1229
 |C, C++, Angular, SQL
 |https://www.fiftytwo.com[Website]
 
@@ -237,7 +237,7 @@ https://github.com/ChumbokIT[Github]
 |http://www.frontiersemi.com/center/home.php[Website]
 
 |Furqan Software
-|House 29 (Flat 4B), Road, 20 Rd 22, Block#K,Banani Dhaka-1213
+|House 29 (Flat 4B), Road, 20 Rd 22, Block K, Banani, Dhaka-1213
 |
 |https://furqansoftware.com/[Website]
 
@@ -276,7 +276,7 @@ https://github.com/ChumbokIT[Github]
 
 
 |IBCS-Primax
-|House # 51, Road # 10A, Dhanmondi R/A, Dhaka-1209, Bangladesh
+|House 51, Road 10A, Dhanmondi R/A, Dhaka-1209, Bangladesh
 |Java, Spring
 |http://www.ibcs-primax.com/ibcsonweb/[Website]
 
@@ -311,12 +311,12 @@ https://github.com/ChumbokIT[Github]
 |https://instalogic.com.bd/[Website]
 
 |Integrated Software and Technologies Ltd.
-|Avenue # 9, Road #9, House #1043 (2nd Floor) DOHS Mirpur, Dhaka, Bangladesh
+|Avenue 9, Road 9, House 1043 (2nd Floor), DOHS Mirpur, Dhaka, Bangladesh
 |C, Java, jQuery
 |https://www.istlbd.com/[Website]
 
 |Intellier Limited
-|House # 10, Road # 14, Sector # 01, Uttara, Dhaka 1230
+|House 10, Road 14, Sector 01, Uttara, Dhaka 1230
 |Java, Spring, REST
 |https://intellier.com/[Website]
 
@@ -336,7 +336,7 @@ https://github.com/ChumbokIT[Github]
 |http://ipvision.ca/[Website]
 
 |Isratts Technologies
-|House # 58, Road # 05, O R Nizam Rd R/A, GEC, Chattogram, Bangladesh
+|House 58, Road 05, O R Nizam Rd R/A, GEC, Chattogram, Bangladesh
 |
 |http://www.israttstech.com/[Website]
 
@@ -410,7 +410,7 @@ https://www.linkedin.com/company/magnito-digital/[LinkedIn]
 |http://www.metafour.com[Website]
 
 |Metatude Asia Ltd
-|Mark Mansion (Level 4 & 5), 36 Sonargaon Janapath, Sector #9, Uttara, Dhaka – 1230
+|Mark Mansion (Level 4 & 5), 36 Sonargaon Janapath, Sector 9, Uttara, Dhaka – 1230
 |Java, JavaScript, Angular, .NET, AWS
 |https://www.fellowdigitals.com/metatude[Website], https://www.linkedin.com/company/metatude-asia-ltd/[LinkedIn]
 
@@ -435,9 +435,9 @@ https://www.linkedin.com/company/magnito-digital/[LinkedIn]
 |Ruby on Rails, Android, iOS, .NET, PHP
 |https://www.nascenia.com/[Website]
 
-|NeerLab  
-|140/10, Tootpara taltola hospital cross-road, Khulna, Bangladesh  
-|Web & software development, IoT, Graphics, Network & security
+|NeerLab
+|140/10, Tootpara taltola hospital cross-road, Khulna, Bangladesh
+|Web, Software development, IoT, Graphics, Network, Security
 |https://neerlab.com[Website]
 
 |Netizen IT Limited.
@@ -522,9 +522,9 @@ https://www.linkedin.com/company/magnito-digital/[LinkedIn]
 |Java, IP & VoIP service, Cloud Computing
 |https://www.revesoft.com/[Website]
 
-|Relisource (USA)
-| Building# 4A1, Road 139, Gulshan 1, Dhaka-1212
-| Desktop, Mobile, Web, System & Network, Cloud Computing, AWS, Azure & Open Source DevOps
+|ReliSource (USA)
+|Building 4A1, Road 139, Gulshan 1, Dhaka-1212
+|Desktop, Mobile, Web, System & Network, Cloud Computing, AWS, Azure & Open Source DevOps
 |http://www.relisource.com[Website]
 
 |Rokomari
@@ -546,7 +546,7 @@ https://www.linkedin.com/company/magnito-digital/[LinkedIn]
 |https://research.samsung.com/srbd[Website]
 
 |SCT Bangla Limited
-|F-1, H#14, Block-C, Main Road, Banasree, Rampura, Dhaka, Bangladesh 
+|F-1, H14, Block-C, Main Road, Banasree, Rampura, Dhaka, Bangladesh
 |PHP, Laravel, JavaScript, React, Angular, SQL, Flutter
 |https://www.sct-bangla.com/[Website]
 
@@ -556,7 +556,7 @@ https://www.linkedin.com/company/magnito-digital/[LinkedIn]
 |https://selise.ch/[Website]
 
 |ServicEngine Ltd.
-|House# 8, Abbas Garden, DOHS Mohakhali, Dhaka - 1206
+|House 8, Abbas Garden, DOHS Mohakhali, Dhaka - 1206
 |Groovy, Java, SQL, Spring
 |https://sebpo.com/[Website]
 
@@ -581,7 +581,7 @@ https://www.linkedin.com/company/magnito-digital/[LinkedIn]
 |https://streamstech.com.bd[Website]
 
 |SoftwarePeople
-|3rd Floor, House# 76/A, Road# 11, Banani, Dhaka
+|3rd Floor, House 76/A, Road 11, Banani, Dhaka
 |.Net, Java, Spring, Hibernate, AngularJS
 |https://www.facebook.com/softwarepeoplewpp[Facebook]
 
@@ -651,7 +651,7 @@ https://www.linkedin.com/company/southtechgroup/[LinkedIn]
 |HTML, CSS, JavaScript, Bootstrap
 |https://technext.it/[Website]
 
-|TechFlix  
+|TechFlix
 |6100, Rajshahi
 |Web development, hosting, google ads, ERP solutions
 |https://www.techflixbd.com[Website]
@@ -671,12 +671,12 @@ https://www.linkedin.com/company/southtechgroup/[LinkedIn]
 |Vantage Labs (USA)
 |6th Floor, Dynasty Tower, Begum Rokeya Avenue, Mirpur 11, Dhaka, Bangladesh
 |Java, PHP, AngularJS
-|https://www.vantage.com/[Website],  https://www.facebook.com/VantageLabsDhaka/[Facebook]
+|https://www.vantage.com/[Website], https://www.facebook.com/VantageLabsDhaka/[Facebook]
 
 |Vivasoft
-|Floor #16, Ahmed Tower, 28, 30, Kemal Ataturk Ave, Banani, Dhaka 1213
+|Floor 16, Ahmed Tower, 28, 30, Kemal Ataturk Ave, Banani, Dhaka 1213
 |Java, C#, React.js, GoLang, Python
-|https://www.vivasoftltd.com/[Website],  https://www.facebook.com/VivasoftLtd[Facebook]
+|https://www.vivasoftltd.com/[Website], https://www.facebook.com/VivasoftLtd[Facebook]
 
 |Walton Hi-Tech Industries Ltd.
 |Chandra, Kaliakoir, Gazipur
@@ -723,7 +723,7 @@ https://www.linkedin.com/company/widespace-ab[LinkedIn]
 |https://xpeedstudio.com/[Website]
 
 |Zaynax Limited
-|House #3, Road #20, Gulshan Circle 1, Bashati Dream Apartment, Suite #A-7, 7th Floor, Dhaka, Dhaka 1212, BD
+|House 3, Road 20, Gulshan Circle 1, Bashati Dream Apartment, Suite A-7, 7th Floor, Dhaka 1212
 |JavaScript, Node, React, Next, MongoDB, Android, iOS 
 |http://www.zaynax.com[Website]
 
