--- a/README.adoc
+++ b/README.adoc
@@ -118,7 +118,7 @@ https://www.facebook.com/craftsmenltd/[Facebook]
 
 |Chaldal Engineering
 |House 6, Road 9, Block C, Banani
-|.NET, F#, C#, TypeScript, JavaScript, Xamarin, Android, React, React Native, Microsoft Orleans
+|.NET, F#, C#, SQL Server, TypeScript, JavaScript, Xamarin, Android, React, React Native, Microsoft Orleans
 |https://chaldal.tech/[Engineering Website],
 https://chaldal.com/t/Career/[Career Website]
 
